# psycopg

./: .codespellrc  .env.example  .flake8  .gitattributes  .gitignore  .mypy.ini  .pre-commit-config.yaml  .travis.yml  .yamllint.yaml  BACKERS.md  BACKERS.yaml  MANIFEST.in  README.rst  Taskfile.yml  bench_range.py  pyproject.toml  requirements-dev.txt  setup.py  tox.ini
.github/: dependabot.yml
.helix/: Dockerfile.helix  metadata.json  run-tests-eval.sh
psycopg/: .flake8  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
psycopg/psycopg/: __init__.py  _acompat.py  _adapters_map.py  _capabilities.py  _cmodule.py  _column.py  _compat.py  _connection_base.py  _connection_info.py  _conninfo_attempts.py  _conninfo_attempts_async.py  _conninfo_utils.py  _context.py  _copy.py  _copy_async.py  _copy_base.py  _cursor_base.py  _dns.py  _encodings.py  _enums.py  _oids.py  _pipeline.py  _pipeline_async.py  _preparing.py  _py_transformer.py  _queries.py  _server_cursor.py  _server_cursor_async.py  _server_cursor_base.py  _struct.py  _tpc.py  _transform.py  _transformer.py  _tstrings.py  _typeinfo.py  _typemod.py  _tz.py  _wrappers.py  abc.py  adapt.py  (+23 more)
psycopg/psycopg/_anyio/: connection.py  waiting.py
psycopg/psycopg/crdb/: __init__.py  _anyio.py  _types.py  connection.py
psycopg/psycopg/pool/: __init__.py  async_pool.py  base.py  errors.py  pool.py  pool_async.py
psycopg/psycopg/pq/: __init__.py  _debug.py  _enums.py  _pq_ctypes.py  _pq_ctypes.pyi  abc.py  misc.py  pq_ctypes.py
psycopg/psycopg/replication/: NEXT_STEPS.md  __init__.py  abc.py  base_backup_messages.py  base_backup_options.py  base_replication_cursor.py  base_replication_cursor_async.py  logical_replication_cursor.py  logical_replication_cursor_async.py  physical_replication_cursor.py  physical_replication_cursor_async.py  replication_connection.py  replication_connection_async.py  replication_messages.py  replication_options.py  replication_utils.py
psycopg/psycopg/replication/logical_output_plugins/: __init__.py  abc.py  decoder.py  logical_rows.py  output_plugin_options.py
psycopg/psycopg/replication/logical_output_plugins/pgoutput/: __init__.py  pgoutput_decoder.py  pgoutput_messages.py  pgoutput_options.py
psycopg/psycopg/types/: __init__.py  _catalog.py  _xid.py  array.py  bool.py  catalog.py  cid.py  composite.py  datetime.py  enum.py  geometry.py  hstore.py  int2vector.py  json.py  lsn.py  multirange.py  net.py  none.py  numeric.py  numpy.py  oidvector.py  range.py  shapely.py  string.py  tid.py  uuid.py  xid.py
psycopg3/: .flake8  .gitignore  .mypy.ini  README.rst  __init__.py  _pq_ctypes.py  _psycopg3.pyi  _psycopg3.pyx  adapt.pxd  adapt.py  adapt.pyx  adaptation.py  connection.py  conninfo.py  consts.py  copy.py  cursor.py  dbapi20.py  errors.py  exceptions.py  generators.py  generators.pyx  pq.py  pq_ctypes.py  pq_encodings.py  pq_enums.py  proto.py  setup.cfg  setup.py  tox.ini  transform.py  transform.pyx  waiting.py
psycopg3/pq/: .gitignore  __init__.py  __init__.pyi  _pq_ctypes.py  _pq_ctypes.pyi  encodings.py  enums.py  libpq.pxd  misc.py  pq_ctypes.py  pq_cython.pxd  pq_cython.pyx  proto.py
psycopg3/psycopg3/: __init__.py  _column.py  _enums.py  _preparing.py  _queries.py  _sched.py  _transform.py  _typeinfo.py  _tz.py  adapt.py  compat.py  connection.py  conninfo.py  copy.py  cursor.py  dbapi20.py  encodings.py  errors.py  generators.py  named_cursor.py  oids.py  pool.py  proto.py  rows.py  server_cursor.py  sql.py  transaction.py  transform.py  typeinfo.py  version.py  waiting.py
psycopg3/psycopg3/pool/: __init__.py  async_pool.py  base.py  errors.py  pool.py  sched.py  tasks.py
psycopg3/psycopg3/pq/: __init__.py  _enums.py  _pq_ctypes.py  _pq_ctypes.pyi  encodings.py  enums.py  misc.py  pq_ctypes.py  proto.py
psycopg3/psycopg3/types/: __init__.py  array.py  composite.py  date.py  json.py  net.py  network.py  none.py  numeric.py  range.py  singletons.py  string.py  text.py  uuid.py
psycopg3/psycopg3/utils/: codecs.py  compat.py  queries.py
psycopg3/psycopg3/wrappers/: numeric.py
psycopg3/types/: __init__.py  array.py  composite.py  datetime.py  datetime.pyx  endian.pxd  numeric.pxd  numeric.py  numeric.pyx  oids.py  text.pxd  text.py  text.pyx
psycopg3/utils/: queries.py  typing.py
psycopg3_c/: .gitignore  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
psycopg3_c/psycopg3_c/: .gitignore  __init__.py  _psycopg3.pyi  _psycopg3.pyx  adapt.pyx  generators.pyx  libpq.pxd  oids.pxd  pq.pxd  pq.pyx  pq_cython.pxd  pq_cython.pyx  transform.pyx  version.py
psycopg3_c/psycopg3_c/_psycopg3/: __init__.pxd  adapt.pyx  copy.pyx  endian.pxd  generators.pyx  oids.pxd  transform.pyx
psycopg3_c/psycopg3_c/pq/: __init__.pxd  conninfo.pyx  escaping.pyx  libpq.pxd  pgcancel.pyx  pgconn.pyx  pgresult.pyx  pqbuffer.pyx
psycopg3_c/psycopg3_c/types/: date.pyx  datetime.pyx  numeric.pyx  numutils.c  singletons.pyx  string.pyx  text.pyx
psycopg_c/: MANIFEST.in  README-binary.rst  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
psycopg_c/build_backend/: cython_backend.py  psycopg_build_ext.py
psycopg_c/psycopg_c/: .gitignore  __init__.py  _compat.py  _psycopg.pyi  _psycopg.pyx  _uuid.py  pq.pxd  pq.pyx  version.py
psycopg_c/psycopg_c/_psycopg/: __init__.pxd  _queries.pyx  adapt.pyx  column.pyx  copy.pyx  endian.pxd  generators.pyx  generators_ng.pyx  oids.pxd  replication.pyx  transform.pxd  transform.pyx  waiting.pyx
psycopg_c/psycopg_c/pq/: __init__.pxd  conninfo.pyx  escaping.pyx  libpq.pxd  pgcancel.pyx  pgconn.pyx  pgresult.pyx  pqbuffer.pyx
psycopg_c/psycopg_c/types/: array.pyx  bool.pyx  composite.pyx  datetime.pyx  numeric.pyx  numpy.pyx  numutils.c  range.pyx  string.pyx  uuid.pyx
psycopg_pool/: .flake8  README.rst  pyproject.toml  setup.cfg  setup.py  tox.ini
psycopg_pool/psycopg_pool/: __init__.py  _acompat.py  _compat.py  _task.py  abc.py  base.py  base_null_pool.py  null_pool.py  null_pool_async.py  pool.py  pool_async.py  sched.py  sched_async.py  version.py
tools/isort-psycopg/: README.rst  isort_psycopg.py  pyproject.toml
(+298 files in other folders)
