[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[tool.pytest.ini_options]
addopts = "-ra"
filterwarnings = [
    "error",
]
testpaths=[
    "tests",
]
# Note: On Travis they these options seem to leak objects
# log_format = "%(asctime)s.%(msecs)03d %(levelname)-8s %(name)s:%(filename)s:%(lineno)d %(message)s"
# log_level = "DEBUG"

[tool.coverage.run]
source = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
]
[tool.coverage.report]
exclude_lines = [
    "if TYPE_CHECKING:",
    '\.\.\.$',
]

[tool.mypy]
files = [
    "psycopg/psycopg",
    "psycopg_pool/psycopg_pool",
    "psycopg_c/psycopg_c",
    "tests",
]
warn_unused_ignores = true
show_error_codes = true
disable_bytearray_promotion = true
disable_memoryview_promotion = true
strict = true
exclude = '''(?x)(
    ^ build/
    | docs/lib/.*\.py
    | psycopg/build/
    | psycopg_binary/build/
    | psycopg_c/build/
    | psycopg_pool/build/
    | tools/build/pg_config_vcpkg_stub/build/
)'''

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "polib",
    "shapely.*",
]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "tests.*"
check_untyped_defs = true
disallow_untyped_defs = false
disallow_untyped_calls = false

[[tool.mypy.overrides]]
module = [
    "tests.scripts.spiketest",
    "tests.types.test_range",
]
warn_unused_ignores = false  # for mypy 1.14 on Python 3.8

[tool.codespell]
ignore-words-list = "alot,ans,ba,fo,te,erro,varning"
skip = "build,_build,.tox,.mypy_cache,.venv,pq.c,_psycopg.c,*.html"

[tool.isort]
profile = "black"
length_sort = true
multi_line_output = 9
sort_order = "psycopg"  # requires the isort-psycopg module
