[build-system]
requires = ["setuptools>=49.2.0", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "psycopg"
description = "PostgreSQL database adapter for Python"

# STOP AND READ! if you change:
version = "3.3.0.dev1"
# also change:
# - `docs/news.rst` to declare this as the current version or an unreleased one;
# - `psycopg_c/pyproject.toml` to the same version;
# - the `c ` and `binary` "optional-dependencies" below to the same version.
#
# NOTE: you can use `tools/bump_version.py` to maintain versions.

classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.9"
dependencies = [
    "typing-extensions >= 4.6; python_version < '3.13'",
    "tzdata; sys_platform == 'win32'",
]

[[project.authors]]
name = "Daniele Varrazzo"
email = "daniele.varrazzo@gmail.com"

[project.license]
text = "GNU Lesser General Public License v3 (LGPLv3)"

[project.urls]
Homepage = "https://psycopg.org/"
Documentation = "https://psycopg.org/psycopg3/docs/"
Changes = "https://psycopg.org/psycopg3/docs/news.html"
Code = "https://github.com/psycopg/psycopg"
"Issue Tracker" = "https://github.com/psycopg/psycopg/issues"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
c = [
    "psycopg-c == 3.3.0.dev1; implementation_name != \"pypy\"",
]
binary = [
    "psycopg-binary == 3.3.0.dev1; implementation_name != \"pypy\"",
]
pool = [
    "psycopg-pool",
]
test = [
    "anyio >= 4.0",
    "mypy >= 1.14",
    "pproxy >= 2.7",
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0",
    "pytest-randomly >= 3.5",
]
dev = [
    "ast-comments >= 1.1.2",
    "black >= 24.1.0",
    "codespell >= 2.2",
    "dnspython >= 2.1",
    "flake8 >= 4.0",
    "isort[colors] >= 6.0",
    "isort-psycopg",
    "mypy >= 1.14",
    "pre-commit >= 4.0.1",
    "types-setuptools >= 57.4",
    "wheel >= 0.37",
]
docs = [
    "Sphinx >= 5.0",
    "furo == 2022.6.21",
    "sphinx-autobuild >= 2021.3.14",
    "sphinx-autodoc-typehints >= 1.12",
]

[tool.setuptools]
zip-safe = false
license-files = ["LICENSE.txt"]
include-package-data = true

[tool.setuptools.package-data]
psycopg = [
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
