[metadata]
name = psycopg
description = PostgreSQL database adapter for Python
url = https://psycopg.org/psycopg3/
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

# Use a versioning scheme as defined in
# https://www.python.org/dev/peps/pep-0440/

# STOP AND READ! if you change:
version = 3.2.0.dev1
# also change:
# - `docs/news.rst` to declare this as the current version or an unreleased one
# - `psycopg_c/setup.cfg`, and the extra dependencies below, to the same version.
#
# Check out tools/bump_version.py to help maintaining versions.

project_urls =
    Homepage = https://psycopg.org/
    Documentation = https://psycopg.org/psycopg3/docs/
    Changes = https://psycopg.org/psycopg3/docs/news.html
    Code = https://github.com/psycopg/psycopg
    Issue Tracker = https://github.com/psycopg/psycopg/issues
    Download = https://pypi.org/project/psycopg/

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE.txt

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
    backports.zoneinfo >= 0.2.0; python_version < "3.9"
    typing-extensions >= 4.1
    tzdata; sys_platform == "win32"
    importlib-metadata >= 1.4; python_version < "3.8"

[options.extras_require]
c =
    psycopg-c == 3.2.0.dev1
binary =
    psycopg-binary == 3.2.0.dev1
pool =
    psycopg-pool
test =
    # TODO: move to anyio >= 4.0 once support for Python 3.7 is dropped
    anyio >= 3.6.2, < 4.0
    mypy >= 1.4.1
    pproxy >= 2.7
    pytest >= 6.2.5
    pytest-cov >= 3.0
    pytest-randomly >= 3.5
dev =
    black >= 23.1.0
    dnspython >= 2.1
    flake8 >= 4.0
    mypy >= 1.4.1
    types-setuptools >= 57.4
    wheel >= 0.37
docs =
    Sphinx >= 5.0
    furo == 2022.6.21
    sphinx-autobuild >= 2021.3.14
    sphinx-autodoc-typehints >= 1.12

[options.package_data]
psycopg = py.typed
