[metadata]
name = psycopg3
description = PostgreSQL database adapter for Python
url = https://psycopg.org/psycopg3/
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

project_urls =
    Homepage = https://psycopg.org/
    Code = https://github.com/psycopg/psycopg3
    Issue Tracker = https://github.com/psycopg/psycopg3/issues
    Download = https://pypi.org/project/psycopg3/

classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
packages = find:
zip_safe = False
include_package_data = True
install_requires =
    typing_extensions

[options.extras_require]
test =
    pytest >= 6, < 6.1
    pytest-asyncio >= 0.14.0, < 0.15

dev =
    tox
    black
    flake8 >= 3.8, < 3.9
    mypy >= 0.782
