[metadata]
name = psycopg3-c
description = PostgreSQL database adapter for Python -- C optimisation distribution
url = https://psycopg.org/psycopg3/
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

project_urls =
    Homepage = https://psycopg.org/
    Code = https://github.com/psycopg/psycopg3
    Issue Tracker = https://github.com/psycopg/psycopg3/issues
    Download = https://pypi.org/project/psycopg3-c/

# TODO: classifiers
classifiers =
    Intended Audience :: Developers
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.rst
long_description_content_type = text/x-rst
license_file = LICENSE.txt

[options]
python_requires = >= 3.6
setup_requires = Cython >= 3.0a5
packages = find:
zip_safe = False
