[build-system]
requires = [
    # Note: pinning this version strictly because of the setuptools warning:
    #
    #   `[tool.setuptools.ext-modules]` in `pyproject.toml` is still
    #   *experimental* and likely to change in future releases
    #
    "setuptools == 80.3.1",
    "wheel >= 0.37",
    "tomli >= 2.0.1; python_version < '3.11'",
]

# The cython_backend is a build backend adding a Cython dependency if the c
# source must be build from pxd files (when building from git checkout), and
# doesn't require Cython when needing to build from c files (when building
# from the sdist bundle).
build-backend = "cython_backend"
backend-path = ["build_backend"]

[cython-backend]
# These packages are only installed if there are pyx files to compile.
cython-requires = ["Cython >= 3.1.1"]

[project]
name = "psycopg-c"
description = "PostgreSQL database adapter for Python -- C optimisation distribution"
version = "3.3.0.dev1"
license = "LGPL-3.0-only"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Cython",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.10"

[[project.authors]]
name = "Daniele Varrazzo"
email = "daniele.varrazzo@gmail.com"

[project.urls]
Homepage = "https://psycopg.org/"
Documentation = "https://psycopg.org/psycopg3/docs/"
Changes = "https://psycopg.org/psycopg3/docs/news.html"
Code = "https://github.com/psycopg/psycopg"
"Issue Tracker" = "https://github.com/psycopg/psycopg/issues"
Funding = "https://github.com/sponsors/dvarrazzo"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[tool.setuptools]
packages = [
    "psycopg_c",
    "psycopg_c.pq",
    "psycopg_c._psycopg",
    "psycopg_c.types",
]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
# NOTE: do not include .pyx files: they shouldn't be in the sdist
# package, so that build is only performed from the .c files (which are
# distributed instead).
psycopg_c = [
    "py.typed",
    "*.pyi",
    "*.pxd",
    "_psycopg/*.pxd",
    "pq/*.pxd",
]
psycopg_binary = [
    "py.typed",
    "*.pyi",
]

# Note: these ext modules lack details such as libraries and directories.
# They are added by the 'psycopg_build_ext' build module.
[[tool.setuptools.ext-modules]]
name = "psycopg_c._psycopg"
sources = ["psycopg_c/_psycopg.c", "psycopg_c/types/numutils.c"]

[[tool.setuptools.ext-modules]]
name = "psycopg_c.pq"
sources = ["psycopg_c/pq.c"]

[tool.setuptools.cmdclass]
build_ext = "psycopg_build_ext.psycopg_build_ext"
