[build-system]
requires = ["setuptools>=80.3.1", "wheel>=0.37"]
build-backend = "setuptools.build_meta"

[project]
name = "psycopg-pool"
description = "Connection Pool for Psycopg"

# STOP AND READ! if you change:
version = "3.3.0.dev1"
# also change:
# - `docs/news_pool.rst` to declare this version current or unreleased

license = "LGPL-3.0-only"
license-files = ["LICENSE.txt"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: MacOS :: MacOS X",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: POSIX",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: Implementation :: CPython",
    "Programming Language :: Python :: Implementation :: PyPy",
    "Topic :: Database",
    "Topic :: Database :: Front-Ends",
    "Topic :: Software Development",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
requires-python = ">= 3.10"
dependencies = [
    "typing-extensions >= 4.6",
]

[[project.authors]]
name = "Daniele Varrazzo"
email = "daniele.varrazzo@gmail.com"

[project.urls]
Homepage = "https://psycopg.org/"
Documentation = "https://www.psycopg.org/psycopg3/docs/advanced/pool.html"
Changes = "https://psycopg.org/psycopg3/docs/news_pool.html"
Code = "https://github.com/psycopg/psycopg"
"Issue Tracker" = "https://github.com/psycopg/psycopg/issues"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[project.optional-dependencies]
test = [
    "anyio >= 4.0",
    "mypy >= 1.14",
    "pproxy >= 2.7",
    "pytest >= 6.2.5",
    "pytest-cov >= 3.0",
    "pytest-randomly >= 3.5",
]

[tool.setuptools]
zip-safe = false
include-package-data = true

[tool.setuptools.package-data]
psycopg_pool = [
    "py.typed",
]

[tool.setuptools.packages.find]
namespaces = false
