[metadata]
name = psycopg-pool
description = Connection Pool for Psycopg
url = https://psycopg.org/psycopg3/
author = Daniele Varrazzo
author_email = daniele.varrazzo@gmail.com
license = GNU Lesser General Public License v3 (LGPLv3)

project_urls =
    Homepage = https://psycopg.org/
    Code = https://github.com/psycopg/psycopg
    Issue Tracker = https://github.com/psycopg/psycopg/issues
    Download = https://pypi.org/project/psycopg-pool/

classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
    Operating System :: MacOS :: MacOS X
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Topic :: Database
    Topic :: Database :: Front-Ends
    Topic :: Software Development
    Topic :: Software Development :: Libraries :: Python Modules

long_description = file: README.rst
long_description_content_type = text/x-rst
license_files = LICENSE.txt

[options]
python_requires = >= 3.7
packages = find:
zip_safe = False
install_requires =
    typing-extensions >= 3.10; python_version < "3.10"

[options.package_data]
psycopg_pool = py.typed
