[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "isort-psycopg"
description = "isort plug-in to sort imports by module length first"
# Note: to release a new version:
# python -m build -o dist --wheel .
# twine upload dist/isort_psycopg-*-py3-none-any.whl
version = "0.0.2"

[project.urls]
Code = "https://github.com/psycopg/psycopg/tree/master/tools/isort-psycopg"

[project.readme]
file = "README.rst"
content-type = "text/x-rst"

[[project.authors]]
name = "Daniele Varrazzo"
email = "daniele.varrazzo@gmail.com"

[project.entry-points."isort.sort_function"]
psycopg = "isort_psycopg:psycosort"
